Improvement tests in ExpenseServiceImplTest